Wed, Apr 12, 2023, 4:19 PM +00:00

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p>Hello, welcome to my homepage. I go to Clovis High School. I'm 16 years old. I enjoy nature and going on hikes. I enjoy playing video games and computers. My goal is to travel as much as possible.</p>
                 <h3>Other pages</h3>
                 <button class="btn">
-                    <a href="pages.html">Search</a>
+                    <a href="page1.html">Page 1</a>
                 </button>
                 <p>Lorem ipsum dolor sit amet. Est quas recusandae a quia doloribus ea amet asperiores aut galisum sint quo sint autem. Est voluptas sunt et molestias minima qui suscipit velit. Nam illum voluptas non dolor omnis sed voluptatum facere eum dolores iste cum alias cupiditate?</p>
             </div>
