--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <script src="js/index.js"></script>
+        <script src="js/page1.js"></script>
     </body>
 </html>
