Wed, Apr 12, 2023, 4:43 PM +00:00

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="btn">
                     <a href="page3.html">Page 3</a>
                 </button>
-                <p>Lorem ipsum dolor sit amet. Est quas recusandae a quia doloribus ea amet asperiores aut galisum sint quo sint autem. Est voluptas sunt et molestias minima qui suscipit velit. Nam illum voluptas non dolor omnis sed voluptatum facere eum dolores iste cum alias cupiditate?</p>
+                <h3>DOg</h3>
             </div>
         </div>
         <nav>
