Wed, Apr 12, 2023, 4:46 PM +00:00

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <button class="btn">
                     <a href="page3.html">Page 3</a>
                 </button>
-                <h3>DOg</h3>
+                <h3>Dog</h3>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/TinaTerripoo3.jpg">
             </div>
         </div>
         <nav>
