--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <div class="content">
                 <h1>My Homepage</h1>
                 <small>Sebastian Preciado</small>
-                <p>Hello, welcome to my homepage. I go to Clovis High School. I'm 16 years old. I enjoy nature and going on hikes. I enjoy playing video games and computers. My goal is to travel as much as possible.</p>
+                <p>Hello, welcome to my homepage. I go to Clovis High School. I'm 16 years old. I like travelling. I like skating. I like video games. I like music. I like food. I like my dog. See my dog below.</p>
                 <h3>Other pages</h3>
                 <button class="btn">
-                    <a href="page1.html">Page 1</a>
+                    <a href="favorite_song.html">Favorite Song</a>
                 </button>
                 <button class="btn">
                     <a href="page2.html">Page 2</a>
@@ -22,26 +22,11 @@
                 <button class="btn">
                     <a href="page3.html">Page 3</a>
                 </button>
+
                 <h3>Dog</h3>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/TinaTerripoo3.jpg">
             </div>
         </div>
-        <nav>
-            <ul>
-                <li>
-                    <i class="fas fa-home"></i>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <i class="fas fa-user-alt"></i>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <i class="fas fa-envelope"></i>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
 
         <script src="js/index.js"></script>
     </body>
