--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             <div class="content">
                 <h1>My Homepage</h1>
                 <small>Sebastian Preciado</small>
-                <p>Hello, welcome to my homepage. I go to Clovis High School. I'm 16 years old. I like travelling. I like skating. I like video games. I like music. I like food. I like my dog. See my dog below.</p>
+                <p>Hello, welcome to my homepage. I go to Clovis High School. I'm 16 years old. I like travelling. I like skating. I like video games. I like music. I like food. I like my dog. See my dog named Lia below.</p>
                 <h3>Other pages</h3>
                 <button class="btn">
-                    <a href="favorite_song.html">Favorite Song</a>
+                    <a href="favorite_song.html" style="text-decoration: none;">Favorite Song</a>
                 </button>
                 <button class="btn">
-                    <a href="page2.html">Page 2</a>
+                    <a href="favorite_videogame.html" style="text-decoration: none;">Favorite Video Game</a>
                 </button>
                 <button class="btn">
-                    <a href="page3.html">Page 3</a>
+                    <a href="favorite_food.html" style="text-decoration: none;">Favorite Food</a>
                 </button>
 
-                <h3>Dog</h3>
+                <h3>My Dog</h3>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/TinaTerripoo3.jpg">
             </div>
         </div>
