--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <a href="favorite_food.html" style="text-decoration: none;">Favorite Food</a>
                 </button>
 
+                <audio id="song" src="sounds/victory.mp3" preload="auto"></audio>
+                <button class="btn" onclick="document.getElementById('song').play();">VICTORY!!!</button>
+
                 <h3>My Dog</h3>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/TinaTerripoo3.jpg">
             </div>
